--- a/room.html
+++ b/room.html
@@ -1,18 +1,19 @@
 <div class="background-opacity">
     <div class="room-gallery">                    
         <div class="card">
-            <img src="path-to-room-image1.jpg" alt="Room Design 1">
+            <img src="room1.jpg" alt="Room Design 1">
             <p>This is an very pretty living room in very unique theme.1000/800ft room.you get this room within very lower budget.  </p>
         </div>
         <div class="card">
-            <img src="path-to-room-image2.jpg" alt="Room Design 2">
+            <img src="room2.jpg" alt="Room Design 2">
             <p>Modern Bedroom Setup</p>
         </div>
         <div class="card">
-            <img src="path-to-room-image3.jpg" alt="Room Design 3">
+            <img src="room3.jpg" alt="Room Design 3">
             <p>Cozy Guest Room</p>
         </div>
       
         
     </div>
 </div>
+
