--- a/content/kitchen.html
+++ b/content/kitchen.html
@@ -3,43 +3,43 @@
 
   <div class="carousel" id="imageCarousel">
     <div class="carousel-item">
-      <img src="images/kitchen1.jpg" alt="Kitchen1">
+      <img src="kitchen1.jpg" alt="Kitchen1">
       <p>GRAY THEME MODERN KITCHEN</p>
       <p class="price">Price:₹60,000-₹80,000</p>
       <a class="order-button" href="order.html?design=GRAY THEME MODERN KITCHEN">Order This Design</a>
     </div>
     <div class="carousel-item">
-      <img src="images/kitchen2.jpg" alt="Kitchen2">
+      <img src="kitchen2.jpg" alt="Kitchen2">
       <p>DEEP GREEN SIPMLE AND BEUTIFULL KITCHEN</p>
       <p class="price">Price:₹55,000-₹60,000</p>
       <a class="order-button" href="order.html?design=DEEP GREEN SIPMLE AND BEUTIFULL KITCHEN">Order This Design</a>
     </div>
     <div class="carousel-item">
-      <img src="images/kitchen3.jpg" alt="Kitchen3">
+      <img src="kitchen3.jpg" alt="Kitchen3">
       <p>DECENT THEME SIMPLE KITCHEN</p>
       <p class="price">Price:₹60,000-₹70,000</p>
       <a class="order-button" href="order.html?design=DECENT THEME SIMPLE KITCHEN">Order This Design</a>
     </div>
     <div class="carousel-item">
-      <img src="images/kitchen4.jpg" alt="Kitchen4">
+      <img src="kitchen4.jpg" alt="Kitchen4">
       <p>YELLOW WITH WHITE THEME KITCHEN</p>
       <p class="price">Price:₹40,000-₹50,000</p>
       <a class="order-button" href="order.html?design=YELLOW WITH WHITE THEME KITCHEN">Order This Design</a>
     </div>
     <div class="carousel-item">
-      <img src="images/kitchen5.jpg" alt="Kitchen5">
+      <img src="kitchen5.jpg" alt="Kitchen5">
       <p>BROWNY TEXTUTE THEM KITCHEN </p>
       <p class="price">Price:₹70,000-₹80,000</p>
       <a class="order-button" href="order.html?design=BROWNY TEXTUTE THEM KITCHEN">Order This Design</a>
     </div>
     <div class="carousel-item">
-      <img src="images/kitchen6.jpg" alt="Kitchen6">
+      <img src="kitchen6.jpg" alt="Kitchen6">
       <p>SMALL AND SIMPLE KITCHEN</p>
       <p class="price">Price:₹45,000-₹50,000</p>
       <a class="order-button" href="order.html?design=SMALL AND SIMPLE KITCHEN">Order This Design</a>
     </div>
     <div class="carousel-item">
-      <img src="images/kitchen7.jpg" alt="Kitchen7">
+      <img src="kitchen7.jpg" alt="Kitchen7">
       <p>ASTHETIC LUXURY KITCHEN</p>
       <p class="price">Price:₹70,000-₹80,000</p>
       <a class="order-button" href="order.html?design=ASTHETIC LUXURY KITCHEN">Order This Design</a>
