--- a/content/hall.html
+++ b/content/hall.html
@@ -3,37 +3,37 @@
 
   <div class="carousel" id="imageCarousel">
     <div class="carousel-item">
-      <img src="images/hall1.jpg" alt="hall1">
+      <img src="hall1.jpg" alt="hall1">
       <p>UNIQUE AND ELEGANT FAMILY HALL ROOM</p>
       <p class="price">Price:₹30,0000-₹40,0000</p>
       <a class="order-button" href="order.html?design=UNIQUE AND ELEGANT FAMILY HALL ROOM">Order This Design</a>
     </div>
     <div class="carousel-item">
-      <img src="images/hall2.jpg" alt="hall2">
+      <img src="hall2.jpg" alt="hall2">
       <p>BLUE THEME SIMPLE HALL ROOM</p>
       <p class="price">Price:₹80,000-₹10,0000</p>
       <a class="order-button" href="order.html?design=BLUE THEME SIMPLE HALL ROOM">Order This Design</a>
     </div>
     <div class="carousel-item">
-      <img src="images/hall3.jpg" alt="hall3">
+      <img src="hall3.jpg" alt="hall3">
       <p>BARBIE PINK THEME STYLISH HALL ROOM</p>
       <p class="price">Price:₹40,0000-₹50,0000</p>
       <a class="order-button" href="order.html?design=BARBIE PINK THEME STYLISH HALL ROOM">Order This Design</a>
     </div>
     <div class="carousel-item">
-      <img src="images/hall4.jpg" alt="hall4">
+      <img src="hall4.jpg" alt="hall4">
       <p>WHITE AND GOLDEN THEME SIMPLE FAMILY HALL ROOM</p>
       <p class="price">Price:₹90,000-₹15,0000</p>
       <a class="order-button" href="order.html?design=WHITE AND BLACK THEME SIMPLE FAMILY HALL ROOM">Order This Design</a>
     </div>
     <div class="carousel-item">
-      <img src="images/hall5.jpg" alt="hall5">
+      <img src="hall5.jpg" alt="hall5">
       <p>ASTHETIC AND UNIQUE WHITE THEME LARGER HALL ROOM</p>
       <p class="price">Price:₹15,0000-₹30,0000</p>
       <a class="order-button" href="order.html?design=ASTHETIC AND UNIQUE WHITE THEME LARGER HALL ROOM">Order This Design</a>
     </div>
     <div class="carousel-item">
-      <img src="images/hall6.jpg" alt="hall6">
+      <img src="hall6.jpg" alt="hall6">
       <p>UNIQUE AND BEUTIFULL LIGHTING HALL ROOM</p>
       <p class="price">Price:₹20,0000-₹25,0000</p>
       <a class="order-button" href="order.html?design=UNIQUE AND BEUTIFULL LIGHTING HALL ROOM">Order This Design</a>
