--- a/content/room.html
+++ b/content/room.html
@@ -3,43 +3,43 @@
 
   <div class="carousel" id="imageCarousel">
     <div class="carousel-item">
-      <img src="images/room1.jpg" alt="room1">
+      <img src="room1.jpg" alt="room1">
       <p>ELEGANT THEME MASTER BED ROOM</p>
       <p class="price">Price:₹70,000-₹90,000</p>
       <a class="order-button" href="order.html?design=ELEGANT THEME MASTER BED ROOM">Order This Design</a>
     </div>
     <div class="carousel-item">
-      <img src="images/room2.jpg" alt="room2">
+      <img src="room2.jpg" alt="room2">
       <p>SEA THEME VERY BEAUTIFULL BED ROOM</p>
       <p class="price">Price:₹10,0000-₹20,0000</p>
       <a class="order-button" href="order.html?design=SEA THEME VERY BEAUTIFULL BED ROOM">Order This Design</a>
     </div>
     <div class="carousel-item">
-      <img src="images/room3.jpg" alt="room3">
+      <img src="room3.jpg" alt="room3">
       <p>BUTTERFLY THEME BED ROOM</p>
       <p class="price">Price:₹80,000-₹10,0000</p>
       <a class="order-button" href="order.html?design=BUTTERFLY THEME BED ROO">Order This Design</a>
     </div>
     <div class="carousel-item">
-      <img src="images/room4.jpg" alt="room4">
+      <img src="room4.jpg" alt="room4">
       <p>WHITE SIMPLE GUEST ROOM</p>
       <p class="price">Price:₹50,000-₹60,000</p>
       <a class="order-button" href="order.html?design=WHITE SIMPLE GUEST ROOM">Order This Design</a>
     </div>
     <div class="carousel-item">
-      <img src="images/room5.jpg" alt="room5">
+      <img src="room5.jpg" alt="room5">
       <p>ASTHETIC LIGHTING MASTER BED ROOM</p>
       <p class="price">Price:₹10,0000-₹15,0000</p>
       <a class="order-button" href="order.html?design=ASTHETIC LIGHTING MASTER BED ROOM">Order This Design</a>
     </div>
     <div class="carousel-item">
-      <img src="images/room6.jpg" alt="room6">
+      <img src="room6.jpg" alt="room6">
       <p>SIMPLE ELEGANT BED ROOM</p>
       <p class="price">Price:₹65,000-₹75,000</p>
       <a class="order-button" href="order.html?design=IMPLE ELEGANT BED ROOM">Order This Design</a>
     </div>
     <div class="carousel-item">
-      <img src="images/room7.jpg" alt="room7">
+      <img src="room7.jpg" alt="room7">
       <p>SIMPLE BROWNY SINGLE BED ROOM</p>
       <p class="price">Price:₹50,000-₹60,000</p>
       <a class="order-button" href="order.html?design=SIMPLE BROWNY SINGLE BED ROOM">Order This Design</a>
